--- a/templates/positive.html
+++ b/templates/positive.html
@@ -119,6 +119,8 @@ figure {
 
     @media screen and (max-width:600px) {
         .book{
+            height: auto;
+            width: auto;
             margin-top: 12vh;
             margin-bottom: 12vh;
         }
