--- a/templates/positive.html
+++ b/templates/positive.html
@@ -103,7 +103,7 @@ figure {
 }
     
     .book{
-        height: 70vh;
+        height: auto;
         margin-top: 22vh;
         margin-bottom: 15vh;
         margin-right: 5vh;
