--- a/templates/home.html
+++ b/templates/home.html
@@ -232,8 +232,8 @@
             <h4>Our Services</h4>
             <ul>
              
-              <li><i class="bx bx-chevron-right"></i> <a href="">Grade Tally</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="ptojectShpwcase.php">Project Hub</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu.herokuapp.com/grade.php">Grade Tally</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu.herokuapp.com/Showcase.php">Project Hub</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Search with Recommendation</a></li> 
             </ul>
           </div>
