--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up">
                 <div class="member-img">
-                  <img src="{{url_for('static', filename='images/arbb.jpg')}}" style="width: 100%">
+                  <img src="{{url_for('static', filename='images/arbb.jpg')}}" class="img-fluid" >
                   <div class="social">
                     <a href=""><i class="icofont-linkedin"></i></a>
                   </div>
@@ -195,7 +195,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="member-img">
-                  <img src="{{url_for('static', filename='images/obd.jpg')}}" style="width: 100%">
+                  <img src="{{url_for('static', filename='images/obd.jpg')}}" class="img-fluid" >
                   <div class="social">
                     <a href=""><i class="icofont-linkedin"></i></a>
                   </div>
@@ -210,14 +210,14 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up" data-aos-delay="200">
                 <div class="member-img">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                  <img src="{{url_for('static', filename='images/user.png')}}" class="img-fluid">
                   <div class="social">
                     <a href=""><i class="icofont-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Mazhar Khan</h4>
-                  <span>Web Developer & Database Designer</span>
+                  <h4>Sahil Mulani</h4>
+                  <span>Database Designer</span>
                 </div>
               </div>
             </div>
@@ -225,13 +225,13 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="member-img">
-                  <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                  <img src="{{url_for('static', filename='images/mazharprofile.jpg')}}" class="img-fluid">
                   <div class="social">
                     <a href=""><i class="icofont-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Sahil Mulani</h4>
+                  <h4>Mazhar Khan</h4>
                   <span>Web Developer & Database Designer</span>
                 </div>
               </div>
