--- a/templates/index.html
+++ b/templates/index.html
@@ -307,7 +307,7 @@
       <textarea class="form-control" id="comments" name="comments" placeholder="Enter your issue" rows="4"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button class="btn btn-info" type="submit" value="Send">Send</button>
+          <button class="btn btn-success" type="submit" value="Send">Send</button>
           
         </div>
       </div>
@@ -352,8 +352,8 @@ By providing every student with a quality education, and the materials they need
             <h4>Our Services</h4>
             <ul>
              
-              <li><i class="bx bx-chevron-right"></i> <a href="grade.php">Grade Tally</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="ptojectShpwcase.php">Project Hub</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu1.herokuapp.com/grade.php">Grade Tally</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu1.herokuapp.com/projectShowcase.php">Project Hub</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Search by Recommendation</a></li> 
             </ul>
           </div>
