--- a/templates/home.html
+++ b/templates/home.html
@@ -12,8 +12,6 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -232,8 +230,8 @@
             <h4>Our Services</h4>
             <ul>
              
-              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu.herokuapp.com/grade.php">Grade Tally</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu.herokuapp.com/Showcase.php">Project Hub</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu1.herokuapp.com/grade.php">Grade Tally</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://quality-edu1.herokuapp.com/projectShowcase.php">Project Hub</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Search with Recommendation</a></li> 
             </ul>
           </div>
